# vault-memory

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  RELEASE-NOTES.md  STATUS.md  pytest.ini
.cursor/: mcp.json
.cursor-plugin/: plugin.json
.grok-plugin/: plugin.json
commands/: vault-curate.md  vault-sync.md
config/: vault-memory.example.yaml
docker/: .env.example  docker-compose.separate.yml  docker-compose.yml
hooks/: hooks.json
mcp-server/: README.md  pyproject.toml
mcp-server/src/vault_memory_mcp/: __init__.py  agent_memory.py  config.py  curator.py  docker_health.py  embeddings.py  graph.py  obsidian.py  provenance.py  resilience.py  server.py  sync.py  vector.py
scripts/: add_research_memory.py  backfill_memory_frontmatter.py  curator-run.sh  docker-up.sh  elon-5step-audit.py  install.sh  migrate-qdrant-to-neo4j.py  session-check.sh  setup-cursor.sh  setup-hermes.sh  test-cycle.sh  triple-correction-test.py  vault-memory-lab.py  watch_daemon.py
scripts/archive/: README.md  migrate-qdrant-to-neo4j.py
skills/vault-memory-curator/: SKILL.md
skills/vault-memory-query/: SKILL.md
skills/vault-memory-setup/: SKILL.md
skills/vault-memory-sync/: SKILL.md
tests/: conftest.py  test_agent_mcp.py  test_agent_memory.py  test_config.py  test_curator.py  test_curator_agent.py  test_docker_health.py  test_elon_audit.py  test_graph_security.py  test_integration.py  test_memory_correction.py  test_obsidian.py  test_plugin_env.py  test_provenance.py  test_resilience.py  test_server.py  test_sync.py
tests/fixtures/vault/: architecture-notes.md  (+1 more)
(+4 files in other folders)
