[project]
name = "vault-memory-mcp"
version = "0.2.5"
description = "MCP server: Obsidian vault + Neo4j graph and vector embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0,<2",
    "neo4j==5.26.0",
    "sentence-transformers==3.3.1",
    "pyyaml==6.0.2",
    "httpx>=0.27.0,<1",
    "watchdog>=6.0.0,<7",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[project.scripts]
vault-memory-mcp = "vault_memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_memory_mcp"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "../tests"]
pythonpath = ["src", ".."]
markers = [
    "integration: requires Docker services",
]
